--- a/Avaliacao4/imc.html
+++ b/Avaliacao4/imc.html
@@ -1,40 +1,53 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IMC</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Calculadora IMC</h1>
 
-    <div class="row p-3 align-items-end">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>IMC</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <div class="container-custom container d-flex flex-column justify-content-start align-items-center pt-5">
+
+    <h1>IMC</h1>
+
+    <div class="row p-3">
       <!-- Peso -->
-      <div class="col-md-2">
+      <div class="col-md-6">
         <label for="peso" class="form-label">Peso (kg)</label>
-        <input type="text" class="form-control" id="peso" placeholder="Peso em kg">
+        <input type="text" class="form-control" id="peso" placeholder="Peso em kilogramas">
       </div>
 
       <!-- Altura -->
-      <div class="col-md-2">
+      <div class="col-md-6">
         <label for="altura" class="form-label">Altura (cm)</label>
-        <input type="text" class="form-control" id="altura" placeholder="Altura em metros">
+        <input type="text" class="form-control" id="altura" placeholder="Altura em centimetros">
       </div>
 
-      <!-- Botão Calcular -->
-      <div class="p-3">
-        <div class="col-md-2">
+
+      <div class="pt-4 p-3 d-flex flex-wrap justify-content-center align-items-center gap-3 text-center">
+        <!-- Botão Calcular -->
+        <div>
           <button type="button" class="btn btn-primary" onclick="calcularIMC()">Calcular</button>
         </div>
-      <!-- Resultado -->
-      <p class="col-md-1">IMC: <span id="resultadoIMC">0</span></p>
-      <p >Classificação: <span id="classificacao"></span></p>
 
-      <div id="tabelaIMC"></div>
+        <!-- Resultado -->
+        <p class="mb-0">IMC: <span id="resultadoIMC">0</span></p>
+        <p class="mb-0">Classificação: <span id="classificacao"></span></p>
+
+        <!-- Tabela IMC -->
+        <div id="tabelaIMC" class="w-100 mt-3"></div>
+      </div>
 
 
-    <script src="js/scripts.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </body>
+      <script src="js/scripts.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
